--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "antd-demo-ts",
-  "version": "0.1.0",
+  "name": "parcel-ts",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "antd": "^3.10.2",
     "flex.css": "^1.1.7",
+    "rc-queue-anim": "^1.6.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
