--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "react-syntax-highlighter": "^9.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
@@ -26,6 +27,7 @@
     "@types/react-dom": "^16.0.9",
     "@types/react-loadable": "^5.4.1",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-syntax-highlighter": "^0.0.7",
     "node-sass": "^4.9.4",
     "react-app-rewired": "^1.6.2",
     "sass-loader": "^7.1.0",
