--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@cycle/dom": "^22.0.0",
+    "@cycle/isolate": "^4.1.0",
+    "@cycle/run": "^5.1.0",
+    "animejs": "^2.2.0",
     "antd": "^3.10.2",
+    "draggabilly": "^2.2.0",
+    "echarts": "^4.2.0-rc.2",
     "file-saver": "^2.0.0-rc.4",
     "flex.css": "^1.1.7",
     "rc-queue-anim": "^1.6.6",
@@ -12,7 +18,9 @@
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
-    "react-syntax-highlighter": "^9.0.1"
+    "react-syntax-highlighter": "^9.0.1",
+    "rxjs": "5.5.6",
+    "xstream": "^11.7.0"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
