--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "react-syntax-highlighter": "^9.0.1",
-    "rxjs": "5.5.6",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
+    "rxjs-hooks": "^0.3.2",
     "xstream": "^11.7.0"
   },
   "scripts": {
