--- a/scripts/template/package.json
+++ b/scripts/template/package.json
@@ -1,7 +1,7 @@
 {
-  "title": "sss",
-  "dependencies": ["test"],
-  "img": "img/idea/house.png",
+  "title": "DefaultDemo",
+  "dependencies": [],
+  "img": "img/default.png",
   "route": "detail",
   "id": "unname",
   "catelog": "idea"
