--- a/src/project/priceCalendar/package.json
+++ b/src/project/priceCalendar/package.json
@@ -1,6 +1,6 @@
 {
   "title": "带当日价格的日历组件",
-  "dependencies": [],
+  "dependencies": ["moment"],
   "img": "img/idea/priceCalendar.png",
   "route": "detail",
   "id": "priceCalendar",
