rxjs处理复杂任务模块

--- a/src/project/metaballs/package.json
+++ b/src/project/metaballs/package.json
@@ -1,5 +1,5 @@
 {
-  "title": "利用SVG做一些黏黏的东西",
+  "title": "Rxjs与SVG动画",
   "img": "img/idea/metaballs.png",
   "dependencies": [ "rxjs"],
   "route": "detail",
