--- a/src/project/excelExport/package.json
+++ b/src/project/excelExport/package.json
@@ -1,8 +1,8 @@
 {
   "title": "在前端进行excel导出",
-  "img": "img/javaScript/excelExport.png",
+  "img": "img/idea/excelExport.png",
   "route": "detail",
   "id": "excelExport",
   "dependencies": ["file-saver"],
-  "catelog": "javascript"
+  "catelog": "idea"
 }
