--- a/src/project/flip-preview/package.json
+++ b/src/project/flip-preview/package.json
@@ -4,5 +4,5 @@
   "route": "detail",
   "id": "flip-preview",
   "catelog": "css",
-  "reference": "https://blog.csdn.net/DeepLies/article/details/88087881"
+  "reference": "http://www.sohu.com/a/291004906_500651"
 }
