--- a/src/project/flip-preview/package.json
+++ b/src/project/flip-preview/package.json
@@ -1,5 +1,5 @@
 {
-  "title": "flip动画过渡-图片预览",
+  "title": "flip动画过渡-预览",
   "img": "img/css/flip-preview.png",
   "route": "detail",
   "id": "flip-preview",
